PLANET-5981 Fix ContentCovers for small screens

--- a/assets/src/styles/blocks/Covers/ContentCovers.scss
+++ b/assets/src/styles/blocks/Covers/ContentCovers.scss
@@ -17,6 +17,12 @@
       -ms-overflow-style: none;
       scrollbar-width: none;
     }
+
+    @media (max-width: 768px) {
+      .post-column {
+        max-width: 45%;
+      }
+    }
   }
 
   .row::-webkit-scrollbar {
